Enhance invoiceSummary.html and invoiceSummary.css with improved initialization and styling. Add JavaScript functionality for tooltips, file upload handling, and loader animations. Update CSS for better layout and responsiveness, including adjustments to impact summary and metric cards. Ensure sections are hidden or displayed appropriately for a smoother user experience.

--- a/shop.html
+++ b/shop.html
@@ -364,7 +364,7 @@
         </div>
 
         <!-- Shop Details Section -->
-        <div id="shopDetailsSection" class="table-section" style="display: none;">
+        <div id="shopDetailsSection" class="table-section">
           <div class="table-header">
             <div class="d-flex align-items-center">
               <button class="back-button" onclick="showSection('shopStatusSection')">
@@ -398,7 +398,7 @@
         </div>
 
         <!-- Billing Readiness Section -->
-        <div id="billingReadinessSection" class="table-section" style="display: none;">
+        <div id="billingReadinessSection" class="table-section">
           <div class="table-header mb-3">
             <div class="d-flex justify-content-between align-items-center flex-wrap gap-3">
               <div class="d-flex align-items-center gap-3">
@@ -544,7 +544,7 @@
         </div>
 
         <!-- Invoice Details Section -->
-        <div id="invoiceDetailsSection" class="table-section" style="display: none;">
+        <div id="invoiceDetailsSection" class="table-section">
           <div class="table-header mb-3">
             <div class="d-flex justify-content-between align-items-center flex-wrap gap-3">
               <div class="d-flex align-items-center gap-3">
