--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -285,6 +285,13 @@
         </div>
 
         <script>
+          // Initialize sections
+          $(document).ready(function() {
+            // Hide loader and recommendation sections initially
+            $('#loaderSection').hide();
+            $('#recommendationSection').hide();
+          });
+
           function animateLoaderSteps() {
             const steps = document.querySelectorAll('.loader-step');
             const stepDuration = 1000; // 1 second per step
@@ -321,7 +328,7 @@
             return steps.length; // Return the number of steps
           }
 
-          // Update the existing upload button click handler
+          // Update the upload button click handler
           $('#uploadBtn').on('click', function() {
             var file = $('#invoiceFile').prop('files')[0];
             if (!file) {
@@ -329,7 +336,7 @@
               return;
             }
 
-            // Show loading state
+            // Show loading state on button
             $(this).addClass('loading');
             $(this).find('.btn-text').addClass('d-none');
             $(this).find('.btn-loading').removeClass('d-none');
@@ -344,14 +351,14 @@
               $('#uploadBtn').find('.btn-icon').removeClass('d-none');
               
               // Show loader section with fade in
-              $('#loaderSection').addClass('show').fadeIn(300, function() {
+              $('#loaderSection').fadeIn(300, function() {
                 // Start the loader animation and get the number of steps
                 const totalSteps = animateLoaderSteps();
 
                 // Show recommendations after animation completes
                 setTimeout(function() {
                   $('#loaderSection').fadeOut(300, function() {
-                    $('#recommendationSection').addClass('show').fadeIn(300);
+                    $('#recommendationSection').fadeIn(300);
                   });
                 }, totalSteps * 1000 + 500); // Total animation time + buffer
               });
@@ -825,91 +832,93 @@
                       </div>
                     </div>
 
-                    <div class="impact-summary">
-                      <div class="impact-header">
-                        <div class="header-content">
-                          <div class="header-icon">
-                            <i class="bi bi-graph-up"></i>
-                          </div>
-                          <div class="header-text">
-                            <h4>Potential Impact Summary</h4>
-                            <div class="header-meta">
-                              <span class="meta-item">
-                                <i class="bi bi-clock"></i>
-                                Last updated: 2 hours ago
-                              </span>
-                              <span class="meta-divider">•</span>
-                              <span class="meta-item">
-                                <i class="bi bi-graph-up"></i>
-                                85% Accuracy
-                              </span>
-                            </div>
+                  </div>
+
+
+                  <div class="impact-summary">
+                    <div class="impact-header">
+                      <div class="header-content">
+                        <div class="header-icon">
+                          <i class="bi bi-graph-up"></i>
+                        </div>
+                        <div class="header-text">
+                          <h4>Potential Impact Summary</h4>
+                          <div class="header-meta">
+                            <span class="meta-item">
+                              <i class="bi bi-clock"></i>
+                              Last updated: 2 hours ago
+                            </span>
+                            <span class="meta-divider">•</span>
+                            <span class="meta-item">
+                              <i class="bi bi-graph-up"></i>
+                              85% Accuracy
+                            </span>
                           </div>
                         </div>
-                        <div class="total-savings">
-                          <div class="savings-card">
-                            <div class="savings-icon">
-                              <i class="bi bi-cash-stack"></i>
-                            </div>
-                            <div class="savings-content">
-                              <span class="savings-label">Potential Savings</span>
-                              <span class="savings-value">$245,670</span>
-                              <div class="savings-trend">
-                                <i class="bi bi-arrow-up-right"></i>
-                                <span>12.5% vs Last Month</span>
-                              </div>
+                      </div>
+                      <div class="total-savings">
+                        <div class="savings-card">
+                          <div class="savings-icon">
+                            <i class="bi bi-cash-stack"></i>
+                          </div>
+                          <div class="savings-content">
+                            <span class="savings-label">Potential Savings</span>
+                            <span class="savings-value">$245,670</span>
+                            <div class="savings-trend">
+                              <i class="bi bi-arrow-up-right"></i>
+                              <span>12.5% vs Last Month</span>
                             </div>
                           </div>
                         </div>
                       </div>
-                      <div class="impact-metrics">
-                        <div class="metric-card">
-                          <div class="metric-icon high">
-                            <i class="bi bi-exclamation-triangle"></i>
-                          </div>
-                          <div class="metric-content">
-                            <div class="metric-value">High Impact Issues</div>
-                            <div class="metric-label">Pricing discrepancies requiring immediate attention</div>
-                          </div>
-                          <div class="metric-bar">
-                            <div class="bar-fill high" style="width: 45%"></div>
-                          </div>
+                    </div>
+                    <div class="impact-metrics">
+                      <div class="metric-card">
+                        <div class="metric-icon high">
+                          <i class="bi bi-exclamation-triangle"></i>
                         </div>
-                        <div class="metric-card">
-                          <div class="metric-icon medium">
-                            <i class="bi bi-exclamation"></i>
-                          </div>
-                          <div class="metric-content">
-                            <div class="metric-value">Medium Impact Issues</div>
-                            <div class="metric-label">Documentation gaps and compliance concerns</div>
-                          </div>
-                          <div class="metric-bar">
-                            <div class="bar-fill medium" style="width: 35%"></div>
-                          </div>
+                        <div class="metric-content">
+                          <div class="metric-value">High Impact Issues</div>
+                          <div class="metric-label">Pricing discrepancies requiring immediate attention</div>
                         </div>
-                        <div class="metric-card">
-                          <div class="metric-icon low">
-                            <i class="bi bi-info-circle"></i>
-                          </div>
-                          <div class="metric-content">
-                            <div class="metric-value">Low Impact Issues</div>
-                            <div class="metric-label">Minor timeline and procedural discrepancies</div>
-                          </div>
-                          <div class="metric-bar">
-                            <div class="bar-fill low" style="width: 20%"></div>
-                          </div>
+                        <div class="metric-bar">
+                          <div class="bar-fill high" style="width: 45%"></div>
                         </div>
                       </div>
-                      <div class="impact-actions">
-                        <button class="action-button primary">
-                          <i class="bi bi-file-earmark-text"></i>
-                          <span>Generate Report</span>
-                        </button>
-                        <button class="action-button secondary">
-                          <i class="bi bi-share"></i>
-                          <span>Share Analysis</span>
-                        </button>
+                      <div class="metric-card">
+                        <div class="metric-icon medium">
+                          <i class="bi bi-exclamation"></i>
+                        </div>
+                        <div class="metric-content">
+                          <div class="metric-value">Medium Impact Issues</div>
+                          <div class="metric-label">Documentation gaps and compliance concerns</div>
+                        </div>
+                        <div class="metric-bar">
+                          <div class="bar-fill medium" style="width: 35%"></div>
+                        </div>
                       </div>
+                      <div class="metric-card">
+                        <div class="metric-icon low">
+                          <i class="bi bi-info-circle"></i>
+                        </div>
+                        <div class="metric-content">
+                          <div class="metric-value">Low Impact Issues</div>
+                          <div class="metric-label">Minor timeline and procedural discrepancies</div>
+                        </div>
+                        <div class="metric-bar">
+                          <div class="bar-fill low" style="width: 20%"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="impact-actions">
+                      <button class="action-button primary">
+                        <i class="bi bi-file-earmark-text"></i>
+                        <span>Generate Report</span>
+                      </button>
+                      <button class="action-button secondary">
+                        <i class="bi bi-share"></i>
+                        <span>Share Analysis</span>
+                      </button>
                     </div>
                   </div>
                 </div>
@@ -923,7 +932,8 @@
 
   <!-- Bootstrap JS Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="src/js/script.js"></script>
+  <!-- Custom JS -->
+  <script src="src/js/invoiceSummary.js"></script>
 </body>
 
 </html>
