refactor(invoiceSummary): update layout and styles for improved user experience
- Comment out the back button in the header actions for future use
- Modify the risk gradient colors for better visual representation
- Adjust the size and styling of the ring wrapper and progress indicators
- Streamline CSS by removing unused styles and enhancing layout consistency
- Introduce animations for the risk indicator to improve visual feedback

--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -446,10 +446,10 @@
                     </div>
                   </div>
                   <div class="header-actions">
-                    <button class="action-button back" id="backToUpload">
+                    <!-- <button class="action-button back" id="backToUpload">
                       <i class="bi bi-arrow-left"></i>
                       <span>Upload New</span>
-                    </button>
+                    </button> -->
                     <button class="action-button refresh">
                       <i class="bi bi-arrow-clockwise"></i>
                       <span>Refresh</span>
@@ -484,11 +484,12 @@
                               <defs>
                                 <linearGradient id="riskGradient" x1="0%" y1="0%" x2="100%" y2="0%">
                                   <stop offset="0%" style="stop-color: #ef4444" />
-                                  <stop offset="100%" style="stop-color: #f87171" />
+                                  <stop offset="50%" style="stop-color: #f97316" />
+                                  <stop offset="100%" style="stop-color: #f59e0b" />
                                 </linearGradient>
                               </defs>
                               <circle class="ring-bg" cx="50" cy="50" r="45"></circle>
-                              <circle class="ring-progress" cx="50" cy="50" r="45" stroke="url(#riskGradient)"></circle>
+                              <circle class="ring-progress" cx="50" cy="50" r="45"></circle>
                             </svg>
                             <div class="ring-content">
                               <div class="ring-value">70%</div>
