--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -223,33 +223,45 @@
             <p>Analyzing document for insights and recommendations...</p>
           </div>
           <div class="loader-progress">
-            <div class="progress-bar">
+            <div class="progress-track">
               <div class="progress-fill"></div>
             </div>
             <div class="progress-steps">
               <div class="step active">
                 <div class="step-icon">
-                  <i class="bi bi-cloud-upload"></i>
+                  <i class="bi bi-cloud-arrow-up"></i>
                 </div>
-                <span>Upload</span>
+                <div class="step-content">
+                  <span class="step-label">Upload</span>
+                  <span class="step-status">In Progress</span>
+                </div>
               </div>
               <div class="step">
                 <div class="step-icon">
                   <i class="bi bi-gear"></i>
                 </div>
-                <span>Process</span>
+                <div class="step-content">
+                  <span class="step-label">Process</span>
+                  <span class="step-status">Pending</span>
+                </div>
               </div>
               <div class="step">
                 <div class="step-icon">
                   <i class="bi bi-graph-up"></i>
                 </div>
-                <span>Analyze</span>
+                <div class="step-content">
+                  <span class="step-label">Analyze</span>
+                  <span class="step-status">Pending</span>
+                </div>
               </div>
               <div class="step">
                 <div class="step-icon">
                   <i class="bi bi-check-circle"></i>
                 </div>
-                <span>Complete</span>
+                <div class="step-content">
+                  <span class="step-label">Complete</span>
+                  <span class="step-status">Pending</span>
+                </div>
               </div>
             </div>
           </div>
