refactor(branding): update logo text and version display across multiple HTML files
- Change the logo subtitle from "Dashboard" to "version: 1.0.0" for consistency
- Remove redundant version display in the footer of each affected HTML file
- Ensure uniform branding across index.html, invoiceCreation.html, invoiceSummary.html, and shop.html

--- a/shop.html
+++ b/shop.html
@@ -46,10 +46,10 @@
             </div>
             <div class="logo-text">
               <span class="primary">SMBA</span>
-              <span class="secondary">Dashboard</span>
+              <span class="secondary">version: 1.0.0</span>
             </div>
           </div>
-          <span class="logo-version">v1.0.0</span>
+          
         </a>
       </div>
 
