feat(navigation): add Invoice Summary link to navigation in multiple HTML files
- Introduce a new navigation link for "Invoice Summary" with an accompanying icon and subtitle
- Update index.html, invoiceCreation.html, and shop.html to include the new link for improved user access to invoice summary features

--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
               <span class="nav-subtitle">Monitor Shop Performance</span>
             </div>
           </a>
+          <a class="nav-link" href="invoiceSummary.html">
+            <i class="bi bi-file-text"></i>
+            <div class="nav-content">
+              <span class="nav-title">Invoice Summary</span>
+              <span class="nav-subtitle">& Recommendation</span>
+            </div>
+          </a>
           <a class="nav-link" href="invoiceCreation.html">
             <i class="bi bi-file-text"></i>
             <div class="nav-content">
